Fix bottom spacing between headers and paragraphs
Chromium renderer in MardownPad 2 would ignore a header's bottom margin
when the following paragraph's top margin was set to zero. This fix sets
the following paragraph's top margin to match the header's bottom margin.
Renders fine in the editor as well as in the browser.

--- a/markdownpad-github.css
+++ b/markdownpad-github.css
@@ -91,7 +91,7 @@ a:first-child h1, a:first-child h2, a:first-child h3, a:first-child h4, a:first-
 }
 
 h1+p, h2+p, h3+p, h4+p, h5+p, h6+p {
-  margin-top: 0;
+  margin-top: 10px;
 }
 
 /* LINKS
